--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,11 @@
 <div class="row align-items-center mb-4 animate__animated animate__fadeIn">
     <div class="col-lg-12 text-center">
         <div class="d-inline-block p-2 bg-warning bg-opacity-10 rounded-pill mb-3">
-            <span class="text-warning fw-bold small px-4 text-uppercase" style="letter-spacing: 3px;">Pura Vida Costa Rica</span>
+            <span class="text-warning fw-bold small px-4 text-uppercase" style="letter-spacing: 3px;">Somos muy Diferentes</span>
         </div>
-        <h1 class="display-3 fw-bold mb-0">Explora con La Tribu</h1>
+        <h1 class="display-3 fw-bold mb-0">Camina con La Tribu</h1>
         <p class="lead text-muted mt-2 mx-auto" style="max-width: 700px;">
-            Calendario oficial de expediciones de La Tribu de Los Libres. ¡Suma puntos y conquista cumbres!
+            Calendario oficial de caminatas de La Tribu de Los Libres. ¡Suma puntos y conquista retos!
         </p>
     </div>
 </div>
